--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\bozhk\OneDrive\Документы\Icons\icons-desktop\folder.ico,0
+IconResource=C:\Users\krash\Documents\Icons\icons-desktop\folder.ico,0
 [ViewState]
 Mode=
 Vid=
